torch/RNN/parallel_scripts/slurm-3228749.out
WORLD_SIZE=4
MASTER_ADDR=i18n18
/var/spool/slurm/d/job3228749/slurm_script: line 24: /torch/.venv/bin/activate: No such file or directory
  File "test.py", line 131
    print(f"Hello from rank {rank} of {world_size} on {gethostname()} where there are {gpus_per_node} allocated GPUs per node.", flush=True)
  File "test.py", line 131
    print(f"Hello from rank {rank} of {world_size} on {gethostname()} where there are {gpus_per_node} allocated GPUs per node.", flush=True)
  File "test.py", line 131
    print(f"Hello from rank {rank} of {world_size} on {gethostname()} where there are {gpus_per_node} allocated GPUs per node.", flush=True)
                                                                                                                              ^
SyntaxError: invalid syntax
                                                                                                                              ^
SyntaxError: invalid syntax
  File "test.py", line 131
    print(f"Hello from rank {rank} of {world_size} on {gethostname()} where there are {gpus_per_node} allocated GPUs per node.", flush=True)
                                                                                                                              ^
                                                                                                                              ^
SyntaxError: invalid syntax
SyntaxError: invalid syntax
srun: error: i18n18: tasks 0-1: Exited with exit code 1
srun: error: i18n21: tasks 2-3: Exited with exit code 1
